--- a/client/package.json
+++ b/client/package.json
@@ -43,8 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "preinstall": "npm install --force",
-    "build": "npm run preinstall && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
